# rust-cookbook-code

./: .gitignore  Cargo.toml  README.md
docs/std/: rust-std-mod-pin.md
examples/: unpin.rs
src/: main.rs
src/algorithms/: README.md  gen_rand.rs  mod.rs  sort_vec.rs
src/algorithms/bytes/byteorder/: Cargo.toml
src/algorithms/bytes/byteorder/src/: main.rs
src/algorithms/map/hashmap/: Cargo.toml
src/algorithms/map/hashmap/src/: lib.rs
src/algorithms/too_many_lists/: Cargo.toml
src/algorithms/too_many_lists/src/: first.rs  forth.rs  lib.rs  second.rs  third.rs
src/compress/: mod.rs
src/concurrency/: explicit_threads.rs  mod.rs  parallel_tasks.rs
src/crypt/: encryption.rs  hashing.rs  mod.rs
src/examples/: literals_operators.rs  mod.rs
src/exercises/: accumulate.rs  acronym.rs  affine_cipher.rs  mod.rs  word_count.rs
src/gui/winit/cursor_grab/: Cargo.toml
src/gui/winit/cursor_grab/src/: main.rs
src/gui/winit/fullscreen/: Cargo.toml
src/gui/winit/fullscreen/src/: main.rs
src/gui/winit/monitor_list/: Cargo.toml
src/gui/winit/monitor_list/src/: main.rs
src/gui/winit/resizable/: Cargo.toml
src/gui/winit/resizable/src/: main.rs
src/io/async-std/chat/: Cargo.toml
src/io/async-std/chat/src/: client.rs  main.rs  server.rs
src/io/mio/mob/: Cargo.toml
src/io/mio/mob/src/: client.rs  connection.rs  main.rs  server.rs
src/io/mio/pingpong/: Cargo.toml
src/io/mio/pingpong/src/: main.rs
src/io/mio/tcp_server/: Cargo.toml
src/io/mio/tcp_server/src/: main.rs
src/io/mio/udp_server/: Cargo.toml
src/io/mio/udp_server/src/: main.rs
src/io/tokio/chat/: Cargo.toml
src/io/tokio/chat/src/: main.rs
src/io/tokio/connect/: Cargo.toml
src/io/tokio/connect/src/: main.rs
src/io/tokio/echo/: Cargo.toml
src/io/tokio/echo/src/: main.rs
src/io/tokio/echo_udp/: Cargo.toml
src/io/tokio/echo_udp/src/: main.rs
src/io/tokio/hello_world/: Cargo.toml
src/io/tokio/hello_world/src/: main.rs
src/io/tokio/mini-http/: Cargo.toml
src/io/tokio/mini-http/examples/: async_std.rs  std.rs  tokio.rs
src/io/tokio/mini-http/src/: date.rs  lib.rs  main.rs  request.rs  response.rs
src/io/tokio/mini-redis/: .gitignore  Cargo.toml
src/io/tokio/mini-redis/src/: client.rs  connection.rs  db.rs  frame.rs  parse.rs  server.rs  shutdown.rs
src/io/tokio/mini-redis/src/cmd/: get.rs  keys.rs  mod.rs  set.rs
src/io/tokio/print_packet/: Cargo.toml
src/io/tokio/print_packet/src/: main.rs
src/io/tokio/proxy/: Cargo.toml
src/io/tokio/proxy/src/: main.rs
src/io/tokio/tinydb/: Cargo.toml
src/io/tokio/tinydb/src/: main.rs
src/io/tokio/udp-codec/: Cargo.toml
src/io/tokio/udp-codec/src/: main.rs
src/io/tokio/udp_client/: Cargo.toml
src/io/tokio/udp_client/src/: main.rs
src/lang/: borrow.rs  closure.rs  ctfe.rs  func_ptr.rs  match.rs  never.rs  raw_ptr.rs  return_func.rs  scope.rs  str.rs  struct.rs  trait.rs  type_sys.rs
src/lang/async/cache-padded/: Cargo.toml
src/lang/async/cache-padded/src/: lib.rs
src/lang/async/easy-parallel/src/: lib.rs
src/lang/async/event-listener/: Cargo.toml
src/lang/async/event-listener/src/: lib.rs
src/lang/async/futures-lite/: Cargo.toml
src/lang/async/futures-lite/src/: feature.rs  lib.rs  stream.rs
src/lang/async/futures-test/: Cargo.toml
src/lang/async/futures-test/src/: lib.rs
src/lang/async/parking/src/: lib.rs
src/lang/async/warker-fn/: Cargo.toml
src/lang/async/warker-fn/src/: lib.rs
src/lang/irust/: Cargo.toml
src/lang/irust/src/: arc  arc.rs  mpsc.rs
src/lang/std/condvar/: Cargo.toml
src/lang/std/condvar/src/: main.rs
src/lang/syn/trace-var/example/: Cargo.toml
src/lang/syn/trace-var/trace-var/: Cargo.toml
src/lang/syn/trace-var/trace-var/src/: lib.rs
src/lang/sync/sync_mpsc/: Cargo.toml
src/lang/sync/sync_mpsc/src/: main.rs
src/network/: README.md
src/nom/hex_color/: Cargo.toml
src/nom/hex_color/src/: main.rs
src/nom/iterator/: Cargo.toml
src/nom/iterator/src/: main.rs
src/nom/json/: Cargo.toml
src/nom/json/src/: main.rs
src/nom/string/: Cargo.toml
src/nom/string/src/: main.rs
src/opengl/glium/screenshot/: Cargo.toml
src/opengl/glium/screenshot/src/: main.rs
src/os/iamos/: Cargo.toml
src/os/iamos/.cargo/: config
src/os/iamos/src/: main.rs
src/pest/csv-tool/: Cargo.toml
src/pest/csv-tool/src/: main.rs
src/raft/: five_mem_node.rs  mod.rs  single_node.rs
src/raft/five_node/: Cargo.toml
src/raft/five_node/src/: main.rs
src/raft/single_node/: Cargo.toml
src/raft/single_node/src/: main.rs
src/raft/tokio-raft/: Cargo.toml
src/raft/tokio-raft/src/: error.rs
src/raft/tokio-raft/src/raft/: client.rs  log.rs  message.rs  mod.rs  server.rs  state.rs
src/raft/tokio-raft/src/raft/node/: candidate.rs  follower.rs  leader.rs  mod.rs
src/raft/tokio-raft/src/storage/log/: memory.rs  mod.rs
src/rpc/tonic/tonic-examples/: Cargo.toml  build.rs
src/rpc/tonic/tonic-examples/src/helloworld/: client.rs  server.rs  server_blocking.rs
src/serde/json_serde/: Cargo.toml
src/serde/json_serde/src/: de.rs  error.rs  lib.rs  ser.rs
src/terminal/termion/mouse_event/: Cargo.toml
src/terminal/termion/mouse_event/src/: main.rs
src/terminal/termion/read_password/: Cargo.toml
src/terminal/termion/read_password/src/: main.rs
src/terminal/termion/style_color/: Cargo.toml
src/terminal/termion/style_color/src/: main.rs
src/terminal/tui/tui-examples/: Cargo.toml
src/terminal/tui/tui-examples/src/util/: event.rs
src/web/wasm/yew/minimal/: Cargo.toml
src/web/wasm/yew/minimal/src/: lib.rs  main.rs
