[package]
name = "rust-cookbook-code"
version = "0.1.0"
authors = ["iamazy <1448588084@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
rand_distr="0.2"
flate2 = "1.0"
tar = "0.4"
crossbeam="0.7"
lazy_static = "1.4.0"
walkdir = "2"
threadpool = "1.7"
num_cpus = "1.12"
ring = "0.16.11"
num = "0.2"
image="0.23"
rayon = "1.3"
glob = "0.3.0"
anyhow="1.0"
error-chain="0.12"
data-encoding="2.2"
raft = "0.6.0-alpha"
slog = "2.2"
slog-envlogger = "2.1.0"
slog-stdlog = "4"
slog-term = "2.4.0"
slog-async = "2.3.0"
protobuf = { version = "2", features = ["with-bytes"] }
regex="1"