[package]
name = "single_node"
version = "0.1.0"
authors = ["iamazy <1448588084@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raft="0.6.0-alpha"
raft-proto = "0.6.0-alpha"
slog="2"
slog-term="2"
slog-envlogger = "2.2.0"
slog-stdlog = "4"
slog-async="*"