[package]
name = "mob"
version = "0.1.0"
authors = ["iamazy <1448588084@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio="0.6.22"
log="0.4.8"
slab="0.3.0"
byteorder = "1.3.4"
env_logger="0.7.1"

[[bin]]
name="mob-server"
path="src/main.rs"

[[bin]]
name="mob-client"
path="src/client.rs"