[package]
name = "mini-http"
version = "0.1.0"
authors = ["iamazy <1448588084@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes="0.5"
futures="0.3"
httparse="1.3.4"
time="0.1"  # 0.2

[dev-dependencies]
async-std = "1"
num_cpus = "1.13.0"
smol = "0.1"
tokio = { version = "0.2", features = ["full"] }