[package]
name = "futures-lite"
version = "0.1.0"
authors = ["iamazy <1448588084@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-core = "0.3.5"
futures-io = { version = "0.3.5", default-features = false, features = ["std"]}
pin-project-lite = "0.1.7"