[package]
name = "trace-var"
version = "0.1.0"
authors = ["iamazy <1448588084@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn= {version = "1", features = ["full", "fold"]}
quote = "1"
proc-macro2 = {version = "1", features = ["nightly"]}